# agent-routing-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_routing/: __init__.py
tests/: test_routing.py
